<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/decs_heading_toolbar_title"
                android:text="@string/title_select_guests"
                android:textColor="@color/text_main"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/buttonToolbarBack"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="5dp"
                android:background="@null"
                android:contentDescription="@string/decs_back"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/blue_main" />
        </androidx.appcompat.widget.Toolbar>
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGuestReservationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/decs_heading_have_reservation"
                android:padding="10dp"
                android:text="@string/title_have_reservations"
                android:textColor="@color/text_main"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHaveReservationGuests"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGuestReservationLabel"
                tools:itemCount="6"
                tools:listitem="@layout/layout_guest_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGuestNeedReservationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/decs_heading_need_reservation"
                android:padding="10dp"
                android:text="@string/title_need_reservations"
                android:textColor="@color/text_main"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvHaveReservationGuests" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNeedReservationGuests"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGuestNeedReservationLabel"
                tools:itemCount="6"
                tools:listitem="@layout/layout_guest_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGuestMessageRule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/decs_message_guest_rule"
                android:drawableStart="@drawable/ic_baseline_info_24"
                android:drawablePadding="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/message_guest_rule"
                android:textColor="@color/text_main"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvNeedReservationGuests" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/cta_continue"
        android:enabled="false"
        android:padding="5dp"
        android:text="@string/cta_continue"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollview" />
</androidx.constraintlayout.widget.ConstraintLayout>